# fancyiter

./: README.md  pyproject.toml
src/fancyiter/: __init__.py  _collect.py  _decorators.py  _iter.py  functions.py  input_validation.py  iterator.py
tests/: test_collect.py  test_docs.py  test_dunders.py  test_misc.py
