

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fancyiter"
authors = [
    {name = "Mitchell Matsumori-Kelly", email = "65527685+mtmk-ee@users.noreply.github.com "},
]
description = "Composable iteration"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["iterators"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]
